tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@list_comprehension_missing_in.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/list_comprehension_missing_in.txt
---
error: Found identifier but expected in.
 --> list_comprehension_missing_in.txt:1:12
  |
1 | {{ [x for x xs] }}
  |             ^^
